resources/app-sre/app-sre-observability-stage/alertmanager.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: app-interface
  name: alertmanager-app-sre-stage
spec:
  host: alertmanager.stage.app-sre.devshift.net
  port:
    targetPort: http
  to:
    kind: Service
    name: alertmanager-proxy
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
