resources/app-sre/app-sre-observability-stage/grafana.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: app-interface
  name: grafana-app-sre-stage
spec:
  host: grafana.stage.app-sre.devshift.net
  port:
    targetPort: https
  to:
    kind: Service
    name: grafana
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
