resources/app-sre/app-sre-observability-stage/pushgateway.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    k8s-app: pushgateway
  name: pushgateway
spec:
  host: pushgateway-stage.1061.app-sre.openshiftapps.com
  port:
    targetPort: external
  tls:
    termination: edge
  to:
    kind: Service
    name: pushgateway-nginx-gate
    weight: 100
  wildcardPolicy: None
